--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ astropy==4.0.1.post1
 colorama==0.4.3
 cycler==0.10.0
 Django==3.0.8
+gunicorn==20.0.4
 isort==4.3.21
 kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
@@ -14,6 +15,7 @@ numpy==1.19.1
 Pillow==7.2.0
 plotly==4.9.0
 psutil==5.7.2
+psycopg2==2.8.5
 pylint==2.5.3
 pyparsing==2.4.7
 python-dateutil==2.8.1
